build/log/idf_py_stderr_output_6575
Command: make -j 10 all
In file included from /home/fus/Documents/DO-AN-02/main/../helper/general.h:16,
                 from /home/fus/Documents/DO-AN-02/main/do-an-02.h:1,
                 from /home/fus/Documents/DO-AN-02/main/do-an-02.c:1:
/home/fus/Documents/DO-AN-02/main/../helper/espGPIOWrapper.h:18:25: error: section attribute not allowed for 'isrFunc_t'
   18 | typedef void IRAM_ATTR (isrFunc_t)(void *pv);
      |                         ^~~~~~~~~
/home/fus/Documents/DO-AN-02/main/../helper/espGPIOWrapper.h: In function 'gpioSetISR':
/home/fus/Documents/DO-AN-02/main/../helper/espGPIOWrapper.h:51:36: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
   51 |     gpio_isr_handler_add(pin, isr, (void*) pin);
      |                                    ^
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/do-an-02.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7295: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
